tests/valid/module/file_module_math.facet
mod math;

fn main() -> affine isize {
  (math::id 1)
}
