tests/invalid/module/duplicate_item.facet
mod m {
  fn f() -> unrestricted () { () }
  fn f() -> unrestricted () { () }
}
